objects/Service_Console_Links_URL__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>contains URLs for Quick Links</description>
    <fields>
        <fullName>Label__c</fullName>
        <description>Text shown on the list.</description>
        <inlineHelpText>Text shown on the list.</inlineHelpText>
        <label>Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <description>Section Name. The value for this field must be existing in InfoLeaseSection Custom Setting.</description>
        <inlineHelpText>Section Name. The value for this field must be existing in InfoLeaseSection Custom Setting.</inlineHelpText>
        <label>Section Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Tab title shown in opened URL.</description>
        <inlineHelpText>Tab title shown in opened URL.</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL of the link.</description>
        <inlineHelpText>URL of the link.</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Service Console Links URL</label>
</CustomObject>